# betline

./: README.md
bet_maker/: .env.example  Dockerfile  Makefile  pyproject.toml
bet_maker/docker_compose/: app.yaml  storages.yaml
bet_maker/src/: alembic.ini
bet_maker/src/api/: exceptions.py  lifespan.py  main.py
bet_maker/src/core/: configs.py  container.py
line_provider/: .env.example  Dockerfile  Makefile  pyproject.toml
line_provider/docker_compose/: app.yaml  messaging.yaml  storages.yaml
line_provider/src/: alembic.ini
line_provider/src/api/: exceptions.py  lifespan.py  main.py
line_provider/src/api/v1/: router.py  schemas.py
line_provider/src/api/v1/views/: events.py
line_provider/src/core/: configs.py  containers.py
line_provider/src/domain/: exceptions.py
line_provider/src/domain/commands/: bet.py  event.py
line_provider/src/domain/entities/: event.py
line_provider/src/domain/messages/: base.py  event.py
line_provider/src/gateways/postgresql/: database.py
line_provider/src/gateways/postgresql/alembic/: env.py
line_provider/src/gateways/postgresql/alembic/versions/: 2025_02_12_0014-141c7ba7588d_new_init.py
line_provider/src/gateways/postgresql/models/: __init__.py  event.py
line_provider/src/infra/converters/: bet.py
line_provider/src/infra/message_broker/: converters.py  kafka.py
line_provider/src/services/: base.py  event.py
line_provider/src/tests/: conftest.py
line_provider/src/tests/use_cases/: test_use_cases.py
line_provider/src/use_cases/bet/: bet.py
line_provider/src/use_cases/event/: event.py
(+28 files in other folders)
